# stack-operations-arrays-

./: CMakeLists.txt  README.md  main.c
